changed collect - toList